--- a/JSP_TeamProject/.classpath
+++ b/JSP_TeamProject/.classpath
@@ -15,5 +15,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="C:/Program Files/Java/jre1.8.0_251/lib/ext/jsoup-1.13.1.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/jre1.8.0_251/lib/ext/json-simple-1.1.1.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
