--- a/JSP_TeamProject/.classpath
+++ b/JSP_TeamProject/.classpath
@@ -3,18 +3,14 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/jre1.8.0_251/lib/ext/ojdbc6.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v9.0">
 		<attributes>
 			<attribute name="owner.project.facets" value="jst.web"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre1.8.0_251">
-		<attributes>
-			<attribute name="owner.project.facets" value="java"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Program Files/Java/jre1.8.0_251/lib/ext/jsoup-1.13.1.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/jre1.8.0_251/lib/ext/json-simple-1.1.1.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="D:/프로그래밍/Java_Workspace/JSP_TeamProject/json-20190722.jar"/>
+	<classpathentry kind="lib" path="D:/프로그래밍/Java_Workspace/JSP_TeamProject/json-simple-1.1.1.jar"/>
+	<classpathentry kind="lib" path="D:/프로그래밍/Java_Workspace/JSP_TeamProject/jsoup-1.11.3.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
