--- a/JSP_TeamProject/.classpath
+++ b/JSP_TeamProject/.classpath
@@ -13,5 +13,7 @@
 	<classpathentry kind="lib" path="D:/프로그래밍/Java_Workspace/JSP_TeamProject/json-simple-1.1.1.jar"/>
 	<classpathentry kind="lib" path="D:/프로그래밍/Java_Workspace/JSP_TeamProject/jsoup-1.11.3.jar"/>
 	<classpathentry kind="lib" path="D:/프로그래밍/Java_Workspace/JSP_TeamProject/WebContent/WEB-INF/lib/mysql-connector-java-8.0.20.jar"/>
+	<classpathentry kind="lib" path="D:/프로그래밍/Java_Workspace/JSP_TeamProject/WebContent/WEB-INF/lib/jstl-1.2.jar"/>
+	<classpathentry kind="lib" path="D:/프로그래밍/Java_Workspace/JSP_TeamProject/WebContent/WEB-INF/lib/taglibs-standard-impl-1.2.5.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
