--- a/JSP_Project(Webtoon)/.project
+++ b/JSP_Project(Webtoon)/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>JSP_TeamProject</name>
+	<name>JSP_Project(Webtoon)</name>
 	<comment></comment>
 	<projects>
 	</projects>
