--- a/JSP_TeamProject_Home/.project
+++ b/JSP_TeamProject_Home/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>JSP_TeamProject</name>
+	<name>JSP_TeamProject_Home</name>
 	<comment></comment>
 	<projects>
 	</projects>
